[package]
name = "horizon"
version = "0.7.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.9.0"
sysinfo = "0.30.5"
blake3 = "1.5.0"
hex = "0.4.3"

secrecy = { version = "0.8.0", features = ["alloc"] }
hashbrown = { version = "0.14.3", features = ["rayon"] }